--- a/src/app/features/landing-page/landing-page.component.html
+++ b/src/app/features/landing-page/landing-page.component.html
@@ -1,3 +1,3 @@
 <div class="landing-page-container">
-  <button mat-raised-button>Login</button>
+  <button mat-raised-button (click)="handleLogin()">Login</button>
 </div>
