--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -1,1 +1,8 @@
-<p>dashboard works!</p>
+<div class="dashboard-page-container">
+  <mat-tab-group>
+    <mat-tab label="Accounts API">
+      <app-accounts-api></app-accounts-api>
+    </mat-tab>
+    <mat-tab label="Cards API"> <app-cards-api></app-cards-api> </mat-tab>
+  </mat-tab-group>
+</div>
