chore: Add functionality to add new account

--- a/src/app/features/dashboard/accounts-api/accounts-api.component.html
+++ b/src/app/features/dashboard/accounts-api/accounts-api.component.html
@@ -8,4 +8,9 @@
       ></app-account-tile>
     </div>
   </div>
+  <div>
+    <button mat-raised-button color="primary" (click)="handleAddAccount()">
+      Add Account
+    </button>
+  </div>
 </div>
