--- a/src/app/features/dashboard/accounts-api/accounts-api.component.scss
+++ b/src/app/features/dashboard/accounts-api/accounts-api.component.scss
@@ -1,6 +1,6 @@
 .accounts-api-container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   margin: 2rem;
