--- a/src/app/features/dashboard/cards-api/cards-api.component.html
+++ b/src/app/features/dashboard/cards-api/cards-api.component.html
@@ -1,1 +1,22 @@
-<p>cards-api works!</p>
+<div class="cards-api-container">
+  <mat-tab-group>
+    <mat-tab label="Countries">
+      <app-ccm-table
+        *ngIf="cardCountries$ | async as countries"
+        [ccm]="countries"
+      ></app-ccm-table>
+    </mat-tab>
+    <mat-tab label="Currencies">
+      <app-ccm-table
+        *ngIf="cardCurrencies$ | async as currencies"
+        [ccm]="currencies"
+      ></app-ccm-table>
+    </mat-tab>
+    <mat-tab label="Merchants">
+      <app-ccm-table
+        *ngIf="cardMerchants$ | async as merchants"
+        [ccm]="merchants"
+      ></app-ccm-table>
+    </mat-tab>
+  </mat-tab-group>
+</div>
