chore: Add createNewTransaction and deleteAccount functionality to accounts API components

--- a/src/app/features/dashboard/accounts-api/account-tile/account-tile.component.html
+++ b/src/app/features/dashboard/accounts-api/account-tile/account-tile.component.html
@@ -19,4 +19,12 @@
       View Transactions
     </button>
   </div>
+  <div class="action-btn">
+    <button mat-raised-button color="primary" (click)="handleNewTransaction()">
+      New Transaction
+    </button>
+    <button mat-raised-button (click)="handleDeleteAccount()">
+      Delete Account
+    </button>
+  </div>
 </mat-card>
