--- a/src/app/features/dashboard/accounts-api/accounts-api.component.html
+++ b/src/app/features/dashboard/accounts-api/accounts-api.component.html
@@ -5,6 +5,8 @@
         [accountData]="account"
         (viewBalanceSelected)="handleViewBalanceSelected($event)"
         (viewTransactionsSelected)="handleViewTransactionsSelected($event)"
+        (createNewTransaction)="handleCreateNewTransaction($event)"
+        (deleteAccount)="handleDeleteAccount($event)"
       ></app-account-tile>
     </div>
   </div>
