chore: Add "Create New Account" button to accounts-api.component.html

--- a/src/app/features/dashboard/accounts-api/accounts-api.component.html
+++ b/src/app/features/dashboard/accounts-api/accounts-api.component.html
@@ -10,4 +10,9 @@
       ></app-account-tile>
     </div>
   </div>
+  <div>
+    <button mat-raised-button (click)="handleAddAccountDialog()">
+      Create New Account
+    </button>
+  </div>
 </div>
