chore: Add beneficiary components and styles for beneficiaries API

--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -5,6 +5,11 @@
         <app-accounts-api></app-accounts-api>
       </ng-template>
     </mat-tab>
+    <mat-tab label="Beneficiaries">
+      <ng-template matTabContent>
+        <app-beneficiaries-api></app-beneficiaries-api>
+      </ng-template>
+    </mat-tab>
     <mat-tab label="Cards API">
       <ng-template matTabContent>
         <app-cards-api></app-cards-api>
