chore: Add payBeneficiary functionality to beneficiaries facade and beneficiary details component wip

--- a/src/app/features/dashboard/beneficiaries-api/beneficiaries-api.component.html
+++ b/src/app/features/dashboard/beneficiaries-api/beneficiaries-api.component.html
@@ -2,5 +2,6 @@
   <app-beneficiary-details
     *ngFor="let beneficiary of beneficiaries$ | async"
     [beneficiary]="beneficiary"
+    (payBeneficiary)="handlePayBeneficiary($event)"
   ></app-beneficiary-details>
 </div>
