chore: Update beneficiaries-api.component.html to improve button styling and placement

--- a/src/app/features/dashboard/beneficiaries-api/beneficiaries-api.component.html
+++ b/src/app/features/dashboard/beneficiaries-api/beneficiaries-api.component.html
@@ -1,9 +1,15 @@
 <div class="beneficiary-container">
-  <button mat-raised-button (click)="handleShowCreateBeneficiaryDialog()">Create beneficary</button>
-  
   <app-beneficiary-details
     *ngFor="let beneficiary of beneficiaries$ | async"
     [beneficiary]="beneficiary"
     (payBeneficiary)="handlePayBeneficiary($event)"
   ></app-beneficiary-details>
+
+  <button
+    mat-raised-button
+    color="primary"
+    (click)="handleShowCreateBeneficiaryDialog()"
+  >
+    Create beneficary
+  </button>
 </div>
