feat: :lipstick: Added a welcome splash page

--- a/src/app/features/landing-page/landing-page.component.html
+++ b/src/app/features/landing-page/landing-page.component.html
@@ -1,5 +1,4 @@
-<div class="landing-page-container flex flex-col w-svw h-svh gap-8 p-10">
-  <!-- <button mat-raised-button (click)="handleLogin()">Login</button> -->
+<!-- <div class="landing-page-container flex flex-col w-svw h-svh gap-8 p-10">
 
   <div class="w-full flex justify-center">
     <img
@@ -45,4 +44,27 @@
     <span>Don't have an account?</span>
     <a class="text-blue font-bold" href="">Sign Up</a>
   </p>
+</div> -->
+
+<div class="flex flex-col w-svw h-svh gap-10 p-10 justify-center">
+  <div class="w-full flex justify-center">
+    <img
+      class="w-9/10 p-3"
+      src="../../../assets/logo.png"
+      alt="Voyage Finance"
+    />
+  </div>
+
+  <div class="flex flex-col gap-2 w-full text-center">
+    <p class="text-3xl font-bold">Explore the app</p>
+    <p class="text-xl font-normal">
+      Manage all your travel finances in one place with ease.
+    </p>
+  </div>
+
+  <button class="bg-blue text-[white] text-lg h-10 font-normal" routerLink=".">
+    Get started
+  </button>
 </div>
+
+<!-- <button mat-raised-button (click)="handleLogin()">Login</button> -->
