chore: Add edit-trip and view-trip components to dashboard-upcoming-trips

--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="dashboard-page-container">
-  <mat-tab-group>
+  <!-- <mat-tab-group>
     <mat-tab label="Accounts API">
       <ng-template matTabContent>
         <app-accounts-api></app-accounts-api>
@@ -15,5 +15,9 @@
         <app-cards-api></app-cards-api>
       </ng-template>
     </mat-tab>
-  </mat-tab-group>
+  </mat-tab-group> -->
+  <app-dashboard-header></app-dashboard-header>
+  <app-dashboard-main-tiles-container></app-dashboard-main-tiles-container>
+  <app-dashboard-fast-actions-container></app-dashboard-fast-actions-container>
+  <app-dashboard-upcoming-trips></app-dashboard-upcoming-trips>
 </div>
