feat: :sparkles: Switch from landing page to log in page

--- a/src/app/features/landing-page/landing-page.component.html
+++ b/src/app/features/landing-page/landing-page.component.html
@@ -1,5 +1,31 @@
-<!-- <div class="landing-page-container flex flex-col w-svw h-svh gap-8 p-10">
+@if(!showLogIn) {
+<div id="landing-page">
+  <div class="flex flex-col w-svw h-svh gap-10 p-10 justify-center">
+    <div class="w-full flex justify-center">
+      <img
+        class="w-9/10 p-3"
+        src="../../../assets/logo.png"
+        alt="Voyage Finance"
+      />
+    </div>
 
+    <div class="flex flex-col gap-2 w-full text-center">
+      <p class="text-3xl font-bold">Explore the app</p>
+      <p class="text-xl font-normal">
+        Manage all your travel finances in one place with ease.
+      </p>
+    </div>
+
+    <button
+      class="bg-blue text-[white] text-lg h-10 font-normal"
+      (click)="switchToLoginPage()"
+    >
+      Get started
+    </button>
+  </div>
+</div>
+} @else {
+<div class="flex flex-col w-svw h-svh gap-8 p-10">
   <div class="w-full flex justify-center">
     <img
       class="w-3/5 p-5"
@@ -30,7 +56,12 @@
       <mat-hint>Must be at least 8 characters.</mat-hint>
     </p>
 
-    <button class="bg-blue text-[white] h-10 font-semibold">Log in</button>
+    <button
+      class="bg-blue text-[white] h-10 font-semibold"
+      (click)="handleLogin()"
+    >
+      Log in
+    </button>
     <button
       class="flex flex-row gap-1 outline outline-grey h-10 p-2 justify-center font-semibold"
       routerLink="."
@@ -44,27 +75,6 @@
     <span>Don't have an account?</span>
     <a class="text-blue font-bold" href="">Sign Up</a>
   </p>
-</div> -->
-
-<div class="flex flex-col w-svw h-svh gap-10 p-10 justify-center">
-  <div class="w-full flex justify-center">
-    <img
-      class="w-9/10 p-3"
-      src="../../../assets/logo.png"
-      alt="Voyage Finance"
-    />
-  </div>
-
-  <div class="flex flex-col gap-2 w-full text-center">
-    <p class="text-3xl font-bold">Explore the app</p>
-    <p class="text-xl font-normal">
-      Manage all your travel finances in one place with ease.
-    </p>
-  </div>
-
-  <button class="bg-blue text-[white] text-lg h-10 font-normal" routerLink=".">
-    Get started
-  </button>
 </div>
 
-<!-- <button mat-raised-button (click)="handleLogin()">Login</button> -->
+}
