--- a/src/app/features/dashboard/components/ai-chatbot/ai-chatbot.component.scss
+++ b/src/app/features/dashboard/components/ai-chatbot/ai-chatbot.component.scss
@@ -1,5 +1,23 @@
+.top-bar {
+  height: 5vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: lightgrey;
+}
+
+.icon {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  mat-icon {
+    margin-right: 1rem;
+    color: green;
+  }
+}
+
 .chat-container {
-  height: 85vh;
+  height: calc(90vh - 3rem);
   overflow-y: auto;
   padding: 1rem;
 }
