--- a/src/app/features/dashboard/cards-api/ccm-table/ccm-table.component.html
+++ b/src/app/features/dashboard/cards-api/ccm-table/ccm-table.component.html
@@ -1,4 +1,5 @@
 <div class="countries-table-container">
+  <button *ngIf="currencies" mat-raised-button (click)="onConvertCurrency()">Convert</button>
   <table mat-table [dataSource]="ccm" class="mat-elevation-z8">
     <ng-container matColumnDef="num">
       <th mat-header-cell *matHeaderCellDef>Number</th>
@@ -12,6 +13,11 @@
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Name</th>
       <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+    </ng-container>
+
+    <ng-container *ngIf="currencies" matColumnDef="convert">
+      <th mat-header-cell *matHeaderCellDef>Convert</th>
+      <td mat-cell *matCellDef="let element">{{ element.convert }}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
