--- a/src/app/features/dashboard/components/ai-chatbot/ai-chatbot.component.scss
+++ b/src/app/features/dashboard/components/ai-chatbot/ai-chatbot.component.scss
@@ -1,9 +1,10 @@
 .top-bar {
-  height: 5vh;
+  height: 10vh;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: lightgrey;
+  background-color: #2255a129;
+  font-size: 24px;
 }
 
 .icon {
@@ -17,7 +18,7 @@
 }
 
 .chat-container {
-  height: calc(90vh - 3rem);
+  height: 80vh;
   overflow-y: auto;
   padding: 1rem;
 }
@@ -33,11 +34,15 @@
   text-align: right;
 }
 
-.bot {
-  background-color: lightgray;
-  text-align: left;
-}
 
+.message.bot {
+  background-color: #F5F5F5;
+  text-align: left;
+  border-top-left-radius: 0;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  border-bottom-left-radius: 15px;
+}
 .input-area {
   display: flex;
   align-items: center;
@@ -48,5 +53,7 @@
 input {
   flex-grow: 1;
   margin-right: 0.5rem;
-  padding: 0.5rem;
+  padding: 1rem;
+  background: #F5F5F5;
+  border-radius: 15px;
 }
