Conversion refactor done

--- a/src/app/features/dashboard/cards-api/conversion-dialogue/conversion-dialogue.component.html
+++ b/src/app/features/dashboard/cards-api/conversion-dialogue/conversion-dialogue.component.html
@@ -16,7 +16,7 @@
             <input matInput formControlName="fromAmount" required />
         </mat-form-field>
         
-        <mat-label *ngIf="conversionResult$ | async">Conversion result: {{ conversionResult$ | async }} </mat-label>
+        <!-- <mat-label *ngIf="conversionResult$ | async">Conversion result: {{ conversionResult$ | async }} </mat-label> -->
     </form>
     <button mat-raised-button (click)="handleConvertCurrency()">Create beneficary</button>
 </div>
