--- a/src/app/features/dashboard/cards-api/currency-conversion/currency-options/currency-options.component.scss
+++ b/src/app/features/dashboard/cards-api/currency-conversion/currency-options/currency-options.component.scss
@@ -2,37 +2,57 @@
     display: flex;
     flex-direction: column;
     gap: .5rem;
-    width: 35rem;
-    height: 20rem;
+    min-width: 20rem;
+    width: 100%;
+    height: 15rem;
+    padding: .5rem;
+    overflow: hidden;
 }
 
 .currency-top-header {
     display: flex;
     width: 100%;
-    justify-content: end;
-    overflow: hidden;
-    padding: .5rem;
+    justify-content: center;
+
+    :first-child {
+        font-size: 1rem;
+        font-weight: 500;
+    }
+
+    :last-child {
+        background: none;
+        border: none;
+        color: #979797;
+    }
+
+    * {
+        margin-left: auto;
+    }
 }
 
 .header-message {
     font-family: sans-serif;
     font-weight: bold;
-    margin-left: auto;
-}
-
-.header-icon {
-    transform: rotate(45deg);
-    margin-left: auto;
+    
 }
 
 .currency-options {
     display: flex;
     flex-direction: column;
-    gap: .25rem;
+    gap: 1rem;
+    height: 100%;
     overflow: auto;
-    max-height: 15rem;
 }
 
 .currency-option {
-    
+    display: flex;
+    justify-content: space-between;
+    font-size: 1rem;
+    font-weight: 500;
+    color: #979797;
+
+    &.selected {
+        color: #2255A1;
+    }
 }
+
