--- a/src/app/features/dashboard/cards-api/currency-conversion/currency-conversion.component.html
+++ b/src/app/features/dashboard/cards-api/currency-conversion/currency-conversion.component.html
@@ -1,46 +1,48 @@
 <div class="conversion-wrapper">
-    <div class="top-bar">
-        <button class="back-btn" (click)="handleBack()">
-            <mat-icon class="text-2xl">chevron_left</mat-icon>
-        </button>
-        <h1 class="title">Conversion</h1>
+    <div class="conversion-container">
+        <div class="top-bar">
+            <button class="back-btn" (click)="handleBack()">
+                <mat-icon class="text-2xl">chevron_left</mat-icon>
+            </button>
+            <h1 class="title">Conversion</h1>
+        </div>
+    
+        <img class="mt-20" src="assets/images/conversion.svg">
+    
+        <form *ngIf="conversionFormGroup" class="conversion-form" [formGroup]="conversionFormGroup">
+            <div class="inputs">
+                <label>From</label>
+                <div class="amount-currency-container">
+                    <input type="text" class="input-field" formControlName="fromCurrencyAmount" />
+                    <button class="currency-btn" (click)="showFromCurrencyOptions()">
+                        {{ fromCurrency?.code }}
+                        <mat-icon class="currency-btn-icon">unfold_more</mat-icon>
+                    </button>
+                </div>
+                <label *ngIf="fromAmountInvalid" class="field-error">Please enter valid amount</label>
+            </div>
+            <div class="exchange-icons">
+                <mat-icon>arrow_upward</mat-icon>
+                <mat-icon>arrow_downward</mat-icon>
+            </div>
+            <div class="inputs">
+                <label>To</label>
+                <div class="amount-currency-container">
+                    <input type="text" class="input-field" formControlName="toCurrencyAmount" readonly/>
+                    <button class="currency-btn" (click)="showToCurrencyOptions()">
+                        {{ toCurrency?.code }}
+                        <mat-icon class="currency-btn-icon">unfold_more</mat-icon>
+                    </button>
+                </div>
+                <label *ngIf="toAmountInvalid" class="field-error">Please enter valid amount</label>
+            </div>
+            <div class="currency-rate-container">
+                <span>Currency rate</span>
+                <span *ngIf="conversionRate">1 {{ fromCurrency?.code }} = {{ conversionRate }} {{ toCurrency?.code }}</span>
+            </div>
+            <button class="exchange-btn" (click)="convertCurrency()">
+                Exchange
+            </button>
+        </form>
     </div>
-
-    <img class="mt-20" src="assets/images/conversion.svg">
-
-    <form *ngIf="conversionFormGroup" class="conversion-form" [formGroup]="conversionFormGroup">
-        <div class="inputs">
-            <label>From</label>
-            <div class="amount-currency-container">
-                <input type="text" class="input-field" formControlName="fromCurrencyAmount" />
-                <button class="currency-btn" (click)="showFromCurrencyOptions()">
-                    {{ fromCurrency?.code }}
-                    <mat-icon class="currency-btn-icon">unfold_more</mat-icon>
-                </button>
-            </div>
-            <label *ngIf="fromAmountInvalid" class="field-error">Please enter valid amount</label>
-        </div>
-        <div class="exchange-icons">
-            <mat-icon>arrow_upward</mat-icon>
-            <mat-icon>arrow_downward</mat-icon>
-        </div>
-        <div class="inputs">
-            <label>To</label>
-            <div class="amount-currency-container">
-                <input type="text" class="input-field" formControlName="toCurrencyAmount" readonly/>
-                <button class="currency-btn" (click)="showToCurrencyOptions()">
-                    {{ toCurrency?.code }}
-                    <mat-icon class="currency-btn-icon">unfold_more</mat-icon>
-                </button>
-            </div>
-            <label *ngIf="toAmountInvalid" class="field-error">Please enter valid amount</label>
-        </div>
-        <div class="currency-rate-container">
-            <span>Currency rate</span>
-            <span *ngIf="conversionRate">1 {{ fromCurrency?.code }} = {{ conversionRate }} {{ toCurrency?.code }}</span>
-        </div>
-        <button class="exchange-btn" (click)="convertCurrency()">
-            Exchange
-        </button>
-    </form>
 </div>
